--- a/s20221019/s20221019_04_flex.html
+++ b/s20221019/s20221019_04_flex.html
@@ -17,7 +17,7 @@
         }
 
         .header {
-            /* border: 1px solid black; */
+            border: 1px solid black;
 
         }
 
@@ -36,7 +36,7 @@
         }
 
         .feature {
-            height: 2000px;
+            height: 200px;
         }
 
         .footer {
@@ -63,7 +63,7 @@
         .nav{
             display: flex;
             /* justify-content: space-around; */
-            justify-content: center;            
+            justify-content:space-around;            
         }
         .nav>a{
             margin-right: 25px;
